--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">We teach lighting the way it’s actually learned: visually, practically, and step-by-step. You’ll understand why something works—not just how to press buttons.
+Lighting should feel empowering, not exclusive.</h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -195,7 +196,7 @@
                                 <h4>2009-2011</h4>
                                 <h4 class="subheading">Our Humble Beginnings</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">What began as helping a few people understand their lights turned into something bigger. Explaining. Coaching. Simplifying. Making lighting feel accessible instead of intimidating.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -205,7 +206,7 @@
                                 <h4>March 2011</h4>
                                 <h4 class="subheading">An Agency is Born</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">This didn’t start as a company. It started as questions—Why does this look right? Why does that feel wrong? Long nights, dim rooms, trial and error, and a growing respect for how powerful lighting really is.</p></div>
                         </div>
                     </li>
                     <li>
@@ -215,7 +216,7 @@
                                 <h4>December 2015</h4>
                                 <h4 class="subheading">Transition to Full Service</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">This platform exists to pass on what was learned the hard way—so others don’t have to struggle as long. Clear guidance. Honest answers. Practical wisdom.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -225,7 +226,7 @@
                                 <h4>July 2020</h4>
                                 <h4 class="subheading">Phase Two Expansion</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">We’re expanding carefully—only where it adds real value. Every step forward is designed to serve better, teach clearer, and respond faster. Growth isn’t the goal. Impact is.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
