Update portfolio captions and contact section text

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Creators & videographers</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-subheading text-muted">Don't steal the spotlight.</div>
                             </div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Churches & live production teams</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-subheading text-muted">Designed to serve</div>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Designers & tech leads</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-subheading text-muted">Permanent installations</div>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Beginners who want confidence</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-subheading text-muted">Consistency without sameness.</div>
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Pros who want refinement</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-subheading text-muted">The right reference matters.</div>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Just click one</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-subheading text-muted">Every example earns its place.</div>
                             </div>
                         </div>
                     </div>
@@ -311,7 +311,7 @@ Lighting should feel empowering, not exclusive.</h3>
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Lighting questions don’t have to wait. Neither do good ideas.</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
